--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
     <h1>COUNTRIES API</h1>
     
-    <button class="btn btn-primary mb-4" id="showCtry">Show All countries</button>
+    <div class="container">
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Search</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" id="searchInput">
+        </div>
+        <button class="btn btn-primary mb-4" id="showCtry">Show All countries</button>
+    </div>
+  
 
     <div class="row row-cols-1 row-cols-md-5 g-4" id="result"></div>
 
